# enum-as-derive

./: Cargo.toml
examples/: simple.rs
src/: lib.rs
