[package]
name = "enum-as-derive"
description = "EnumAs derive macro"
version = "0.1.1"
authors = ["Fredrik Østrem <frx.apps@gmail.com>"]
license = "MIT"
repository = "https://github.com/frxstrem/enum-as-derive"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.39", features = [ "derive" ] }
proc-macro2 = "0.4.30"
quote = "0.6.12"
heck = "0.3.1"
